# src/routes.ts
@@ -223,8 +223,8 @@ const models: TsoaRoute.Models = {
     "ILocation": {
         "dataType": "refObject",
         "properties": {
-            "lat": {"dataType":"double","required":true},
-            "lng": {"dataType":"double","required":true},
+            "lat": {"dataType":"double"},
+            "lng": {"dataType":"double"},
         },
         "additionalProperties": {"dataType":"any"},
     },
@@ -236,8 +236,8 @@ const models: TsoaRoute.Models = {
             "aliasName": {"dataType":"string","required":true},
             "bosUrl": {"dataType":"string","required":true},
             "apiUrl": {"dataType":"string","required":true},
-            "clientId": {"dataType":"string","required":true},
-            "clientSecret": {"dataType":"string","required":true},
+            "clientId": {"dataType":"string"},
+            "clientSecret": {"dataType":"string"},
             "address": {"dataType":"string","required":true},
             "description": {"dataType":"string","required":true},
             "location": {"ref":"ILocation"},
@@ -246,30 +246,35 @@ const models: TsoaRoute.Models = {
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "IEditBuilding": {
-        "dataType": "refObject",
-        "properties": {
-            "name": {"dataType":"string"},
-            "aliasName": {"dataType":"string"},
-            "bosUrl": {"dataType":"string"},
-            "apiUrl": {"dataType":"string"},
-            "clientId": {"dataType":"string"},
-            "clientSecret": {"dataType":"string"},
-            "address": {"dataType":"string"},
-            "description": {"dataType":"string"},
-            "location": {"ref":"ILocation"},
-        },
-        "additionalProperties": false,
+        "dataType": "refAlias",
+        "type": {"dataType":"intersection","subSchemas":[{"ref":"IBuilding"},{"dataType":"nestedObjectLiteral","nestedProperties":{"unauthorizeApiIds":{"dataType":"array","array":{"dataType":"string"}},"unauthorizeAppIds":{"dataType":"array","array":{"dataType":"string"}},"authorizeApiIds":{"dataType":"array","array":{"dataType":"string"}},"authorizeAppIds":{"dataType":"array","array":{"dataType":"string"}}}}],"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "IPortofolioInfo": {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
-            "buildingIds": {"dataType":"array","array":{"dataType":"string"}},
             "appIds": {"dataType":"array","array":{"dataType":"string"}},
             "apiIds": {"dataType":"array","array":{"dataType":"string"}},
         },
         "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "IEditProtofolio": {
+        "dataType": "refObject",
+        "properties": {
+            "name": {"dataType":"string"},
+            "authorizeAppIds": {"dataType":"array","array":{"dataType":"string"}},
+            "unauthorizeAppIds": {"dataType":"array","array":{"dataType":"string"}},
+            "authorizeApiIds": {"dataType":"array","array":{"dataType":"string"}},
+            "unauthorizeApiIds": {"dataType":"array","array":{"dataType":"string"}},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "IBuildingCreation": {
+        "dataType": "refAlias",
+        "type": {"dataType":"intersection","subSchemas":[{"ref":"IBuilding"},{"dataType":"nestedObjectLiteral","nestedProperties":{"apiIds":{"dataType":"array","array":{"dataType":"string"}},"appIds":{"dataType":"array","array":{"dataType":"string"}}}}],"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 };
@@ -1586,32 +1591,6 @@ export function RegisterRoutes(app: express.Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.post('/api/v1/pam/create_building',
-            authenticateMiddleware([{"admin":[]}]),
-            ...(fetchMiddlewares<RequestHandler>(BuildingController)),
-            ...(fetchMiddlewares<RequestHandler>(BuildingController.prototype.createBuilding)),
-
-            function BuildingController_createBuilding(request: any, response: any, next: any) {
-            const args = {
-                    buildingInfo: {"in":"body","name":"buildingInfo","required":true,"ref":"IBuilding"},
-            };
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request, response);
-
-                const controller = new BuildingController();
-
-
-              const promise = controller.createBuilding.apply(controller, validatedArgs as any);
-              promiseHandler(controller, promise, response, undefined, next);
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.post('/api/v1/pam/get_building/:id',
             authenticateMiddleware([{"admin":[]}]),
             ...(fetchMiddlewares<RequestHandler>(BuildingController)),
@@ -1632,31 +1611,6 @@ export function RegisterRoutes(app: express.Router) {
 
 
               const promise = controller.getBuildingById.apply(controller, validatedArgs as any);
-              promiseHandler(controller, promise, response, undefined, next);
-            } catch (err) {
-                return next(err);
-            }
-        });
-        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.get('/api/v1/pam/get_all_buildings',
-            authenticateMiddleware([{"admin":[]}]),
-            ...(fetchMiddlewares<RequestHandler>(BuildingController)),
-            ...(fetchMiddlewares<RequestHandler>(BuildingController.prototype.getAllBuildings)),
-
-            function BuildingController_getAllBuildings(request: any, response: any, next: any) {
-            const args = {
-            };
-
-            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request, response);
-
-                const controller = new BuildingController();
-
-
-              const promise = controller.getAllBuildings.apply(controller, validatedArgs as any);
               promiseHandler(controller, promise, response, undefined, next);
             } catch (err) {
                 return next(err);
@@ -2061,6 +2015,33 @@ export function RegisterRoutes(app: express.Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.put('/api/v1/pam/update_portofolio/:portofolioId',
+            authenticateMiddleware([{"admin":[]}]),
+            ...(fetchMiddlewares<RequestHandler>(PortofolioController)),
+            ...(fetchMiddlewares<RequestHandler>(PortofolioController.prototype.updatePortofolio)),
+
+            function PortofolioController_updatePortofolio(request: any, response: any, next: any) {
+            const args = {
+                    portofolioId: {"in":"path","name":"portofolioId","required":true,"dataType":"string"},
+                    data: {"in":"body","name":"data","required":true,"ref":"IEditProtofolio"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new PortofolioController();
+
+
+              const promise = controller.updatePortofolio.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.put('/api/v1/pam/rename_portofolio/:id',
             authenticateMiddleware([{"admin":[]}]),
             ...(fetchMiddlewares<RequestHandler>(PortofolioController)),
@@ -2224,7 +2205,7 @@ export function RegisterRoutes(app: express.Router) {
             function PortofolioController_addBuilding(request: any, response: any, next: any) {
             const args = {
                     portofolioId: {"in":"path","name":"portofolioId","required":true,"dataType":"string"},
-                    body: {"in":"body","name":"body","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"buildingId":{"dataType":"array","array":{"dataType":"string"},"required":true}}},
+                    body: {"in":"body","name":"body","required":true,"ref":"IBuildingCreation"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
